Complete Carpentry Trainer Quest

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3176,7 +3176,7 @@
                     </thead>
                        <tr>   
                         <td>Apprentice</td>
-                        <td></td>
+                        <td>Lumberjacking, Milling, Carpentry</td>
                       </tr>  
                   </table>
                   <table class="table table-sm table-bordered text-center">
@@ -3234,74 +3234,76 @@
                   <hr>
                   <h3 class="stages">Stage 2</h3>
                   <p class="clearfix">
-                    He has a special order to make a new steel breastplate for a new guardsman. He needs some help by smelting 10 iron ingots.
+                    The <span class="light-red">Carpentry Trainer</span> has a special order to make some new shovels for the local farmers. He tasks you to mill 10 wood planks. 
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmtih Training</span><span class="orange">, Return to the Blacksmith Trainer with 10 iron ingots.</span>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Carpenter Training</span><span class="orange">, Return to the Carpenter Trainer with 10 planks.</span>
                     <br>
-                    Return to the mountain and mine some more ore. When you are ready to turn them in to <span class="light-green">Iron Ingots</span> <img src="Images/Valinor/TradeSkills/Iron_Ingot.png" alt="Iron Ingot">, go under the castle to the BlackSmith Shop. To create iron ingots you use your iron ore on the 
-                    forge. <img src="Images/Valinor/TradeSkills/Forge.png" alt="Forge"> You must make sure the forge is lit. Click on the bellow on the right side of the forge to get it started. Once you have created all 10 iron ingots you will be updated.     
+                    Milling requires <span class="light-green">logs</span> and a <span class="light-green">saw</span>. <img src="Images/Valinor/TradeSkills/Saw.png" alt="Saw"> Click on the saw then the logs to begin milling. If you are successful you will recieve a plank. <img src="Images/Valinor/TradeSkills/Plank.png" alt="Plank">    
+                    Once you have created all 10 planks you will be updated.     
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Iron Ingot</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Plank</span> to complete the quest.</span> Return to the <span class="light-red">Carpentry Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">660</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   <h3 class="stages">Stage 3</h3>
                   <p class="clearfix">
-                    Now let's test your skill at forging. Make him a small dagger forged by your hand.
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmith Training</span><span class="orange">, Return to the Blacksmith Trainer with 1 small dagger.</span>
+                    The <span class="light-red">Carpentry Trainer</span> wants to test your carpentry skill. Bring him back 20 arrows crafted by your hand.
                     <br>
-                    Just like in the last two steps get your ore, turn them in to iron ingots. Now to Iron Forge you need to be next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> <img src="Images/Valinor/TradeSkills/Blacksmith_Hammer.png" alt="Blacksmith Hammer"> then on the iron ingot.
-                    The crafting window will open, you will need <span class="light-red">1</span> iron ingot to make a small dagger. Click on Weapons then find the small dagger. <img src="Images/Valinor/TradeSkills/Small_Dagger.png" alt="Small Dagger"> Once you create the dagger you will be updated.
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Carpenter Training</span><span class="orange">, Return to the Carpenter Trainer with 20 Arrows.</span>
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Small Dagger</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
+                    Crafting arrows requries <span class="light-green">logs</span> and <span class="light-green">Carpenters Tools</span>. <img src="Images/Valinor/TradeSkills/Carpenters_Tools.png" alt="Carpenters tools"> 
+                    Click on the carpenters tools then on the log to open the crafting window. Click on Ammunition then on the arrows. <img src="Images/Valinor/TradeSkills/Arrows.png" alt="Arrows"> Once you create the 20 arrows you will be updated.
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Arrows</span> to complete the quest.</span> Return to the <span class="light-red">Carpentry Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">990</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   <h3 class="stages">Stage 4</h3>
                   <p class="clearfix">
-                    We require some replacement weapons for new recruits. Start by creating a light axe.  
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmith Training</span><span class="orange">, Return to the Blacksmith Trainer with 1 Light Axe.</span>
+                    The <span class="light-red">Carpentry Trainer</span> has been asked to make a new mixing bowl for the local chef. He is extremely picky when it comes to the quality of his mixing bowls. Craft a new mixing bowl for the chef. 
                     <br>
-                    Same as before get your ore, turn them in to iron ingots. Stand next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> <img src="Images/Valinor/TradeSkills/Blacksmith_Hammer.png" alt="Blacksmith Hammer"> then on the iron ingot.
-                    The crafting window will open, you will need to be level <span class="light-red">3</span> and <span class="light-red">2</span> iron ingots to make a Light Axe. Click on Weapons then find the Light Axe. <img src="Images/Valinor/TradeSkills/Light_Axe.png" alt="Light Axe"> Once you create the axe you will be updated. 
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Carpenter Training</span><span class="orange">, Return to the Carpenter Trainer with 1 Mixing Bowl.</span>
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Light Axe</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
+                    Crafting a mixing bowl requires <span class="light-green">logs</span> and <span class="light-green">Carpenters Tools</span>. <img src="Images/Valinor/TradeSkills/Carpenters_Tools.png" alt="Carpenters tools"> You will need level <span class="light-red">2</span> and <span class="light-red">1</span> log to craft the mixing bowl.
+                    Click on the carpenters tools then on the log to oepn the crafting window. Click on <span class="light-red">Misc/Tools</span> then on the Mixing Bowl. Once you create the mixing bowl you will be updated. 
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Mixing Bowl</span> to complete the quest.</span> Return to the <span class="light-red">Carpentry Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1320</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   <h3 class="stages">Stage 5</h3>
                   <p class="clearfix">
-                    Your skills are improving! How would you like to try your hand at making a small mace? 
+                    The <span class="light-red">Carpentry Trainer</span> has been asked to make ne utensils for the castle kitchen. He needs you to make a mixing spoon to help put the kitchen back to work. 
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Blacksmith Training</span><span class="orange">, Return to the Blacksmith Trainer with 1 Small Mace.</span>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Carpenter Training</span><span class="orange">, Return to the Carpenter Trainer with 1 Mixing Spoon.</span>
                     <br>
-                    Same as before get your ore, turn them in to iron ingots. Stand next to an Anvil. <img src="Images/Valinor/TradeSkills/Anvil.png" alt="Anvil"> Standing next to the anvil click on your <span class="light-green">Blacksmith Hammer</span> <img src="Images/Valinor/TradeSkills/Blacksmith_Hammer.png" alt="Blacksmith Hammer"> then on the iron ingot.
-                    The crafting window will open, you will need to be level <span class="light-red">5</span> and <span class="light-red">2</span> iron ingots to make a Small Mace. Click on Weapons then find the Small Mace. <img src="Images/Valinor/TradeSkills/Small_Mace.png" alt="Small Mace"> Once you create the mace you will be updated. 
+                    Crafting a mixing spoon requires <span class="light-green">logs</span> and <span class="light-green">Carpenters Tools</span>. <img src="Images/Valinor/TradeSkills/Carpenters_Tools.png" alt="Carpenters tools"> You will need level <span class="light-red">4</span> and <span class="light-red">1</span> log to craft the mixing spoon.
+                    Click on the carpenters tools then on the log to oepn the crafting window. Click on <span class="light-red">Misc/Tools</span> then on the Mixing Spoon. Once you create the mixing spoon you will be updated. 
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Small Mace</span> to complete the quest.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete your task and start a new one.  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> mixing spoon</span> to complete the quest.</span> Return to the <span class="light-red">Carpentry Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
-                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2887</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
                   <h3 class="stages">Stage 6</h3>
                   <p class="clearfix">
-                    <span class="green">QUEST UPDATE:</span><span class="red"> Blacksmith Training</span><span class="orange">, Slay the Hobgoblin Blacksmith and return the stolen blacksmith hammer to the Blacksmith Trainer.</span> 
-                    <img class="npc-img" src="Images/Valinor/Monsters/Hobgoblin_Blacksmith.png" alt="Hobgoblin Blacksmith"> <br>
-                    The <span class="light-red">Blacksmith Trainer's</span> old blacksmith hammer seems to be missing. Help him recover it from the <span class="light-red">Hobgoblin Blacksmith</span>. 
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Carpenter Training</span><span class="orange">, Slay the Goblin Carpenter and return the stolen Axe to the Carpenter Trainer.</span> 
+                    <img class="npc-img" src="Images/Valinor/Monsters/Goblin_Carpenter.png" alt="Goblin Carpenter"> <br>
+                    The <span class="light-red">Carpentry Trainer's</span> axe seems to be missing. Help him recover it from the <span class="light-red">Goblin Carpenter</span>. 
                     The whole grimy lot of them hang out somewhere by the ruined town of Lanore. Follow the road west from the castle until it terminates, you will find their lair.
-                    This map shows the location of the Hobgoblin Blacksmith. <img class="npc-img" src="Images/Valinor/Maps/Hobgoblin_Blacksmith_Location.png" alt="Map of the location of Hobgoblin Blacksmith"> Slay him to find the <span class="light-red">Blacksmith Trainer's</span> Blacksmith Hammer.    <br>
-                    <span class="green">QUEST UPDATE: </span><span class="red">Blacksmith Training</span><span class="orange">, Return the Blacksmith Hammer to the Blacksmith Trainer.</span> Return to the <span class="light-red">Blacksmith Trainer</span> to complete the final task. <br>
+                    This map shows the location of the Goblin Carpenter. <img class="npc-img" src="Images/Valinor/Maps/Goblin_Carpenter_Location.png" alt="Map of the location of Goblin Carpenter"> Slay him to find the <span class="light-red">Carpentry Trainer's</span> Axe.    <br>
+                    <span class="green">QUEST UPDATE: </span><span class="red">Carpenter Training</span><span class="orange">, Return the Axe to the Carpenter Trainer.</span> Return to the <span class="light-red">Carpentry Trainer</span> to complete the final task. <br>
                     He thanks you for all the trouble, he thought he might never see this again. Hope it wasn't too much trouble for you and you were able to teach those goblins a lesson so they don't  try to steal it again. 
                   </p> 
                   <hr> 
@@ -3309,7 +3311,7 @@
                       <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">????</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
-                  You have completed your Blacksmith training.
+                  You have completed your training in Carpentry.
                   <p class="mt-4 py-3 text-center quest-complete">
                   Quest Complete
                 </p>
